<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".PerguntaOitoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/questEN08"
        android:textColor="#000"
        android:textSize="30dp"
        android:paddingLeft="20dp"/>

    <Button
        android:onClick="opcaoUmQuestaoOito"
        android:id="@+id/btnOp1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/quest08ENOptionA" android:background="@drawable/btn_borda"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:padding="15dp"/>

    <Button
        android:onClick="opcaoDoisQuestaoOito"
        android:id="@+id/btnOp2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/quest08ENOptionB" android:background="@drawable/btn_borda"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:padding="15dp"/>

    <Button
        android:onClick="opcaoTresQuestaoOito"
        android:id="@+id/btnOp3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/quest08ENOptionD" android:background="@drawable/btn_borda"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:padding="15dp"/>

    <Button
        android:onClick="opcaoQuatroQuestaoOito"
        android:id="@+id/btnOp4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/quest08ENOptionC" android:background="@drawable/btn_borda"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:padding="15dp"/>

    </LinearLayout>
</ScrollView>